--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
