--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,10 @@
-spring.application.name=${APP_NAME}
-
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.thymeleaf.cache=${THYMELEAF_CACHE:true}
