--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=biblioteca
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
