--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,6 @@
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO}
-spring.jpa.show-sql=${SHOW_SQL}
-
-spring.thymeleaf.cache=${THYMELEAF_CACHE}
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.thymeleaf.cache=${THYMELEAF_CACHE:true}
