--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=biblioteca
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
